# agent-engine-cli

./: pyproject.toml
.github/workflows/: build-binaries.yml  test.yml
src/agent_engine_cli/: a2a_chat.py  chat.py  client.py  main.py
tests/: fakes.py  test_client.py  test_fix_attribute_error.py  test_get_effective_identity.py  test_main.py
