[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-engine-cli"
version = "0.1.8"
description = "Command-line interface for managing Google Cloud Vertex AI Agent Engine deployments"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Mirko Montanari"}
]
keywords = ["agent", "ai", "cli", "google-cloud", "agent-engine", "gcp", "vertex-ai", "llm", "agents", "automation", "vertex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "google-cloud-aiplatform>=1.133.0",
    "a2a-sdk>=0.3.22",
]

[project.scripts]
ae = "agent_engine_cli.main:app"

[project.urls]
"Homepage" = "https://github.com/schoopet/agent-engine-cli"
"Bug Tracker" = "https://github.com/schoopet/agent-engine-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_engine_cli"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
